Clean command on build
Create the clean command to remove compiled files from the dist directory; call it before build; clean out initial state of dist directory

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -11,6 +11,16 @@
             "group": {
                 "kind": "build",
                 "isDefault": true
+            },
+            "dependsOn": [
+                "clean"
+            ]
+        },
+        {
+            "label": "clean",
+            "type": "shell",
+            "windows": {
+                "command": "rimraf dist/*"
             }
         }
     ]
